tests/agl/rejections/scope/set_on_let.agl
let stable = 1
set stable = 2
